[package]
name = "r_cryptosys"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rfd = "0.11"
tar = "0.4"
walkdir = "2.3"
flate2 = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
chrono = "0.4"
subtle = "2.4"